--- a/package.json
+++ b/package.json
@@ -10,22 +10,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "^8.3.0",
+    "@react-native-picker/picker": "^2.11.0",
+    "@react-navigation/drawer": "^7.0.0",
     "@react-navigation/native": "^7.1.8",
-    "@react-navigation/stack": "^7.3.1",
     "@react-navigation/native-stack": "^7.3.12",
+    "@react-navigation/stack": "^7.3.1",
     "expo": "~53.0.9",
+    "expo-audio": "^0.0.0",
+    "expo-haptics": "^14.1.4",
+    "expo-linear-gradient": "^14.1.4",
+    "expo-location": "^18.1.5",
     "expo-notifications": "^0.31.2",
     "expo-status-bar": "~2.2.3",
     "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-calendars": "^1.1312.0",
     "react-native-maps": "1.20.1",
-    "react-native-screens": "~4.10.0",
     "react-native-safe-area-context": "5.4.0",
-    "react-dom": "19.0.0",
-    "@react-navigation/drawer" : "^6.7.1",
-    "react-native-web": "^0.20.0",
-    "@expo/metro-runtime": "~5.0.4"
+    "react-native-screens": "~4.10.0",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
